# hcc_perf

arch_specific_lib/: is_gfx.hpp  test_is_gfx.cpp
array_view_around_array/: av_array.cpp
atomics/: atomic_cas.cpp
auto_annotate/: compileme  test_math.cpp
bandwidth_test/: compileme  copy_test.cpp  hc_profile.hpp  hcc_bandwidth.cpp  runme
bandwidth_test/utilities/: Makefile  StackTimer.cpp  StackTimer.vcxproj  StackTimer.vcxproj.filters  test_stack_timer.c
bandwidth_test/utilities/include/: GoogleTimelineTemplate.h  SimpleTimer.h  StackTimer.h  StackTimer.hpp  openclkernelhelper.h  readfile.hpp
capture_extern/: ext.cpp  ext.hpp  test_math.cpp
concurrent_kernel/: CMakeLists.txt  concurrent_kernel.cpp
create_stream_priority/: create_stream_priority.cpp
dispatch_packet/: dispatch.cpp
dynamic_loading/: compileme  dl_common.hpp  run.cpp  sl0.cpp  sl1.cpp
early_finalization/: buildme  buildme.hip  buildme.hip.lazy  early_finalize_1.cpp  early_finalize_1_hip.cpp
extractkernel/: extractkernel.cpp
extractkernel/code_object_bundle/: code_object_bundle.hpp
float_2/: test_float2.cpp
fork/: fork.cpp
fp16/: test_fp16.cpp
fp16_host_conv/: CMakeLists.txt  c.cpp  test.cpp
global_var/: global_buffer.cpp  global_var_simple.cpp
hip_device_count/: dc.cpp
kernarg_stress/: kernarg_stress.cpp
lane_id/: lane_id.cpp
math/: compileme  test_math.cpp
mem_align/: mem_align.cpp
mem_alloc/: array_view_mem.cpp  mem_alloc.cpp
multiply/: multiply.cpp
multiply_add/: multiply_add.cpp
multithread/: mt_sum.cpp
new_printf/: test_printf.cpp
openmp/: CMakeLists.txt
openmp/launch_latency/: CMakeLists.txt  launch_latency.cpp
openmp/vmulsum/: CMakeLists.txt
p2p_flags/: p2p_flags.cpp
pass_by_value/: pass_by_value.cpp
pingpong/: pingpong.cpp
print_cxx/: print_cxx.cpp
printf/: kernarg_lib.cpp  printf.cpp  printf_amd_kernel_code_exp.cpp  test_buffer.cpp  test_read_write.cpp
printf_bug/: printf_bug.cpp
restrict_pointer/: restrict.cpp
rocr_load_object/: _pywrap_tensorflow_internal.so-198-gfx906.hsaco  rocr_load_obj.cpp
self_pin/: self_pin.cpp
shared_library/: CMakeLists.txt  run_shared_lib.cpp
shared_library/libA/: A.cpp  A.h  CMakeLists.txt
shared_library/test_rpath/: compileme  compileme.hipcc
shared_library_visibility/: compileme  sl.cpp
shuffle/: CMakeLists.txt  compileme.cuda  compileme2.cuda  ds_bperm_bench.cpp  rotate_wave_bench.cpp  shfdown_bench.cpp  shfl_bench.cpp  shfl_bench2.cpp  shflxor_bench.cpp  shfup_bench.cpp  test_ds_bperm.cpp
shuffle_kernels/: CMakeLists.txt  shuffle.cpp
sincos/: sincos.cpp
sizeof/: sizeof.cpp
small_array_view/: small_array_view.cpp
static_array/: static_array.cpp
static_libs/: CMakeLists.txt  a.cpp  a.hpp  p.cpp
static_link/: compileme  main.cpp  static_library1.cpp  sum.cpp
symbol_visibility/: CMakeLists.txt  if.cpp  if.hpp  if_assist.cpp  use_if.cpp
test_private/: test_private.cpp
trig/: compileme  cos.cpp  sin.cpp
vector_copy_fork/: Makefile  vector_copy.cpp
virtual_function/: .gitignore  CMakeLists.txt  f.cpp  f.h
virtual_function-openmp/: CMakeLists.txt
virtual_function-openmp/simple/: CMakeLists.txt  simple.cpp
virtual_function/common/include/: f.h  hip_helper.h
virtual_function/copy_ctor/: CMakeLists.txt  copy_ctor.cpp
virtual_function/exe_libA_libB/: CMakeLists.txt  exe_libA_libB.cpp
virtual_function/libA/: A.cpp  A.h  CMakeLists.txt
virtual_function/libB/: B.cpp  B.h  CMakeLists.txt
virtual_function/normcdf/: CMakeLists.txt  normcdf.cpp
virtual_function/picongpu/: CMakeLists.txt
virtual_function/picongpu/identity/: CMakeLists.txt  identity.cpp
virtual_function/picongpu/manipulate_function_pointer/: CMakeLists.txt  manipulate_function_pointer.cpp
virtual_function/printf_issue/: CMakeLists.txt  f.cpp
virtual_function/private_shared_mem/: CMakeLists.txt  private_shared_mem.cpp
virtual_function/pure_deleted_virtual/: pure_deleted_virtual.cpp
virtual_function/single_code_object/: CMakeLists.txt  single_code_object.cpp
